--- a/wp-content/themes/portfolio/scss/base/_type.scss
+++ b/wp-content/themes/portfolio/scss/base/_type.scss
@@ -66,7 +66,7 @@ h2, h3 {
   font-family: Montserrat, Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
   padding-top: 1rem;
-  line-height: 2.5rem;
+
 }
 
 h4 {
@@ -84,4 +84,10 @@ p {
 li {
   font-family: Muli-Regular, Verdana, Geneva, Tahoma, sans-serif;
   font-size: 0.8rem;
+}
+
+.realisations {
+  h2 {
+    line-height: 2.5rem;
+  }
 }
