--- a/wp-content/themes/portfolio/scss/module/_page_cv.scss
+++ b/wp-content/themes/portfolio/scss/module/_page_cv.scss
@@ -7,7 +7,7 @@
     position: absolute;
     top: 0;
     width: 50vw;
-    height: 180vh;
+    height: 200vh;
     z-index: -1;
 }
 .cv {
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: flex-start;
 
     }
     .cv-titre {
@@ -50,13 +50,9 @@
         }
 
     }
-    .coordonees, .formations, .experiences, .logiciels {
-        text-align: right;
-    }
 
     .hobbys {
         padding-bottom: 6rem;
-        text-align: center;
     }
     .photo-cv {
         position: fixed;
