--- a/wp-content/themes/portfolio/scss/base/_type.scss
+++ b/wp-content/themes/portfolio/scss/base/_type.scss
@@ -66,7 +66,7 @@ h2, h3 {
   font-family: Montserrat, Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
   padding-top: 1rem;
-
+  line-height: 2.2rem;
 }
 
 h4 {
