--- a/wp-content/themes/portfolio/scss/module/_header.scss
+++ b/wp-content/themes/portfolio/scss/module/_header.scss
@@ -18,6 +18,9 @@ nav {
     margin-top: 0.5rem;
     width: 75%;
   }
+  .menu {
+    margin-top: 1rem;
+  }
     .menu-item {
       display: inline-block !important;
         a {
@@ -49,11 +52,12 @@ nav {
       display: none;
     }
     .burger-button {
+      position: fixed;
       display: block;
       color: white;
       position: absolute;
-      top: 1rem;
-      right: 1rem;
+      top: 10px;
+      right: 10px;
       cursor: pointer;
       z-index: 100;
     }
@@ -62,8 +66,8 @@ nav {
       display: block;
       color: white;
       position: absolute;
-      top: 2rem;
-      right: 2rem;
+      top: 20px;
+      right: 25px;
       cursor: pointer;
     }
     
