--- a/wp-content/themes/portfolio/scss/module/_page_cv.scss
+++ b/wp-content/themes/portfolio/scss/module/_page_cv.scss
@@ -16,8 +16,20 @@
     display: flex;
     flex-direction: row;
     overflow-y: hidden;
+    a {
+        font-family: Muli-Light, Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 0.8rem;
+        letter-spacing: 0.05rem;
+        color: white !important;
+        text-decoration: none !important;
+        &:hover {
+            
+            color: $turquoise-clair !important;
+        }
+    }
     .cv-gauche, .cv-droit {
         width: 50%;
+
     }
     .cv-gauche {
         display: flex;
@@ -112,6 +124,13 @@
     }
     .logo-print {
         visibility: hidden;
+        a {
+            text-decoration: none;
+            &:hover {
+                text-decoration: none;
+                color: $corail;
+            }
+        }
     }
     img[alt] { 
         font-size: 1.2rem;
